# block-website

./: .gitignore  README.md  pyproject.toml  run_guard.py
__pycache__/: run_guard.cpython-313.pyc.1802468870944
config/: settings.json
config/certs/: root_ca_cert.cer  root_ca_cert.pem  root_ca_key.pem
prevent_visit/: __init__.py  certs.py  cli.py  config.py  proxy.py  rules.py  windows.py
prevent_visit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prevent_visit/__pycache__/: __init__.cpython-313.pyc.2477216162272  certs.cpython-313.pyc.2166380458400  cli.cpython-313.pyc.1573990197584  cli.cpython-313.pyc.2212147356352  cli.cpython-313.pyc.2441642435264  cli.cpython-313.pyc.2958957210048  config.cpython-313.pyc.1751471487024  config.cpython-313.pyc.1758999419728  config.cpython-313.pyc.2477216163056  proxy.cpython-313.pyc.1655280054800  proxy.cpython-313.pyc.2441676932912  proxy.cpython-313.pyc.2958993618320  rules.cpython-313.pyc.1655282874080  rules.cpython-313.pyc.3059741972768  windows.cpython-313.pyc.1751507463600  windows.cpython-313.pyc.2129405780000  windows.cpython-313.pyc.2754003747872
prevent_visit/data/: adult_domains.txt  blocked_keywords.txt
scripts/: check-status.ps1  install-system-guard.ps1  start-guard.ps1  stop-guard.ps1  uninstall-system-guard.ps1
tests/: test_certs.py  test_cli_helpers.py  test_proxy_helpers.py  test_rules.py  test_windows.py
tests/__pycache__/: test_certs.cpython-313-pytest-9.0.3.pyc.27220  test_proxy_helpers.cpython-313-pytest-9.0.3.pyc.10532  test_proxy_helpers.cpython-313-pytest-9.0.3.pyc.32592  (+3 more)
