[project]
name = "prevent-visit"
version = "0.1.0"
description = "Windows-focused adult-content blocker with proxy, hosts generation, and browser lockdown helpers."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]

[project.scripts]
prevent-visit = "prevent_visit.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = ["prevent_visit"]

[tool.setuptools.package-data]
prevent_visit = [
  "data/*.txt",
  "templates/*.ps1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
